--- a/index.html
+++ b/index.html
@@ -30,39 +30,37 @@
     <div id="result" class="result"></div>
   </div>
 
-  <script>
+ <script>
     const cafes = [
-      { name: "Neko coffee 貓珈", address: "台北市中正區信陽街9號2樓", mrt: "板南線", hours: "每天10:00-20:00", note: "計時制，提供漫畫、Switch等設施" },
-      { name: "Toast Chat", address: "台北市大安區光復南路290巷58號", mrt: "板南線", hours: "12:00–22:00", note: "高評價，餐點優質" },
-      { name: "Take Out Burger", address: "台北市中山區撫順街11號1樓", mrt: "淡水信義線", hours: "11:00–22:00", note: "漢堡店，有貓咪陪伴" },
-      { name: "紅玥緬因貓咖啡藝廊", address: "台北市大同區赤峰街71巷4號", mrt: "淡水信義線", hours: "13:00–21:00", note: "緬因貓主題，需預約" },
-      { name: "貓食光", address: "台北市中正區羅斯福路四段", mrt: "新店線", hours: "11:00–21:00", note: "中途之家，貓咪可領養" },
-      { name: "曬貓咖啡", address: "台北市大安區和平東路二段107巷23弄17號1樓", mrt: "文湖線", hours: "07:30–14:00（平日）", note: "不限時，提供插座和Wi-Fi" },
-      { name: "貓谷", address: "新北市新店區雙城路175-3號", mrt: "新店線", hours: "週五至週日11:00–20:30", note: "50隻貓咪，需預約" },
-      { name: "貓樂貓咖啡（信義遠百店）", address: "台北市信義區松仁路58號7樓", mrt: "淡水信義線", hours: "11:00–21:30", note: "百貨公司內，適合親子" },
-      { name: "貓欸 Camulet", address: "新北市板橋區文化路一段270巷2弄2號", mrt: "板南線", hours: "12:00–21:00", note: "有貓咪零食扭蛋機" },
-      { name: "短短 DuanDuan", address: "新北市板橋區仁化街64巷16號", mrt: "板南線", hours: "12:00–20:00", note: "中途之家，貓咪可領養" },
-      { name: "NUKUNUKU Cat Café", address: "台北市信義區松壽路12號4樓", mrt: "淡水信義線", hours: "11:00–22:00", note: "約20隻貓咪，計時制" },
-      { name: "和貓咪有約", address: "台北市松山區三民路3巷21號", mrt: "松山新店線", hours: "11:00–21:00", note: "約20隻貓咪，低消一杯飲料" },
-      { name: "Moon Sugar 月亮糖糖喵樂園", address: "新北市淡水區中山北路一段212巷36號1樓", mrt: "淡水信義線", hours: "週二至週日11:00–21:00", note: "約30隻布偶貓，門票350元" },
-      { name: "FunLife 中途貓餐廳", address: "台北市大同區天水路2-3號", mrt: "淡水信義線", hours: "12:00–20:00", note: "約22隻貓咪，低消200元" },
-      { name: "貓那邊", address: "台北市中山區民生東路一段70號", mrt: "淡水信義線", hours: "12:00–21:00", note: "提供貓咪互動區" },
-      { name: "貓隱村", address: "新北市新店區中正路542號", mrt: "新店線", hours: "11:00–20:00", note: "貓咪主題餐廳" },
-      { name: "貓客廳", address: "新北市中和區復興路18號", mrt: "中和新蘆線", hours: "12:00–20:00", note: "貓咪救援空間" },
-      { name: "貓藝家", address: "台北市中山區新生北路二段127巷7-2號", mrt: "淡水信義線", hours: "週五至週日12:00–20:00", note: "浪貓救援，提供認養" },
-      { name: "O CAT CAFÉ", address: "新北市三重區重新路四段29號", mrt: "中和新蘆線", hours: "週三至週日10:30–19:00", note: "貓咪自由進出空間" },
-      { name: "白蓮達咖啡", address: "台北市中山區松江路330巷14號1樓", mrt: "中和新蘆線", hours: "12:30–22:00", note: "簡約裝潢，適合閱讀" },
-      { name: "有毛公寓", address: "台北市大安區和平東路三段223巷6號", mrt: "文湖線", hours: "12:00–20:00", note: "貓旅館與咖啡複合式空間" },
-      { name: "一室有貓", address: "台北市中正區忠孝東路一段76號2樓", mrt: "板南線", hours: "12:00–20:00", note: "提供貓咪互動空間" },
-      { name: "肉球森林", address: "台北市大安區信義路四段265巷10號", mrt: "淡水信義線", hours: "12:00–20:00", note: "貓咪主題咖啡廳" },
-      { name: "FUFU CAT Cafe", address: "台北市萬華區漢中街50號2樓", mrt: "板南線", hours: "12:00–20:00", note: "貓咪互動區" },
-      { name: "聞山咖啡 永春有貓店", address: "台北市信義區松山路540號", mrt: "板南線", hours: "12:00–20:00", note: "貓咪主題咖啡廳" },
-      { name: "幸福肥計畫咖啡店", address: "台北市南港區南港路三段50號", mrt: "板南線", hours: "12:00–20:00", note: "貓咪主題咖啡廳" },
-      { name: "仟日咖啡供應所", address: "台北市中山區中山北路二段26巷2號", mrt: "淡水信義線", hours: "12:00–21:00", note: "老宅改造，溫馨感十足" },
-      { name: "Whiskers Cat Café", address: "新北市新莊區中正路256號2樓", mrt: "中和新蘆線", hours: "11:30–20:30", note: "落地窗空間，明亮舒適" },
-      { name: "喵屋 Cat House Café", address: "台北市大安區信義路四段107號", mrt: "淡水信義線", hours: "12:00–21:00", note: "溫馨貓咪風格，輕食飲品" },
-      { name: "小島生活 x 貓貓館", address: "台北市文山區景文街42號", mrt: "新店線", hours: "10:00–19:00", note: "特色選物＋可愛貓咪" },
-      { name: "小眷村有貓館", address: "新北市新店區寶橋路192號", mrt: "新店線", hours: "11:00–20:00", note: "與貓互動＋可外帶餐點" }
+      { name: "Neko coffee 貓珈", address: "台北市中正區信陽街9號2樓", mrt: "板南線", hours: "每天 10:00–20:00", note: "計時制，提供漫畫、Switch等設施" },
+      { name: "FUFUCatCafe", address: "台北市萬華區武昌街二段53號3樓", mrt: "板南線", hours: "每天 12:00–21:00", note: "多品種貓咪，有餐點與書籍閱讀區" },
+      { name: "紅玥緬因貓藝廊", address: "台北市大同區赤峰街71巷4號", mrt: "淡水信義線", hours: "每天 13:00–21:00", note: "緬因貓主題，需預約" },
+      { name: "和貓咪有約", address: "台北市松山區三民路3巷21號", mrt: "松山新店線", hours: "每天 11:00–21:00", note: "約20隻貓咪，低消一杯飲料" },
+      { name: "貓谷", address: "新北市新店區雙城路175號之三", mrt: "新店線", hours: "週五~週日 三時段：11:00–13:30、14:30–17:00、18:00–20:30", note: "50隻貓咪，需預約，入場年齡限制" },
+      { name: "貓欸 Camulet", address: "新北市板橋區文化路一段270巷3弄6號", mrt: "板南線", hours: "週二 11:00–18:00；週三~日 11:00–21:00；週一公休", note: "有貓咪零食扭蛋機，低消$250" },
+      { name: "短短 DuanDuan", address: "新北市板橋區仁化街64巷16號", mrt: "板南線", hours: "週一~六 10:00–20:00；週日 10:00–19:00；週三公休", note: "中途之家，貓咪可領養" },
+      { name: "貓客廳", address: "新北市中和區復興路18號", mrt: "中和新蘆線", hours: "週一、三~日 12:00–20:00；週二公休", note: "貓咪救援空間，不接待8歲以下兒童" },
+      { name: "潘寓 Pan's Haunt", address: "台北市中正區重慶南路三段3巷1號1樓", mrt: "中和新蘆線", hours: "週一~五 14:00–20:00；週六日 12:00–19:00", note: "安靜工作友善空間，有貓咪陪伴，氣氛溫馨" },
+      { name: "貓圖咖啡 CAT.jpg Cafe", address: "台北市大安區潮州街154號", mrt: "淡水信義線", hours: "週一~五 08:30–17:00；週六日 08:00–17:00", note: "安靜閱讀空間，提供特色飲品" },
+      { name: "早初 entry time", address: "台北市萬華區成都路165號", mrt: "板南線", hours: "週一~五 10:00–16:30；週六日 10:00–17:00；週三公休", note: "三層樓空間，有3隻米克斯貓咪" },
+      { name: "小春日和", address: "台北市松山區延壽街361號", mrt: "松山新店線", hours: "每天 11:00–21:00", note: "寵物餐點與洗澡美容服務" },
+      { name: "疍宅", address: "台北市中山區松江路204巷45號", mrt: "中和新蘆線", hours: "週四~六 12:00–23:00；週日、三 12:00–20:00；週一、二公休", note: "老宅風格，甜點多樣" },
+      { name: "貳巷貓弄", address: "新北市三重區永福街52巷2號", mrt: "中和新蘆線", hours: "每天 11:00–20:00", note: "貓咪互動空間，有簡餐甜點" },
+      { name: "囧貓苑子", address: "新北市中和區中山路三段193巷7號", mrt: "中和新蘆線", hours: "週三~日 13:00–20:00；週一、二公休", note: "有貓的日式家常料理店" },
+      { name: "窩日子", address: "台北市大安區潮州街158號", mrt: "淡水信義線", hours: "每天 11:00–21:00", note: "可與貓互動，有插座與Wi-Fi" },
+      { name: "貓隱村", address: "新北市新店區中正路542號", mrt: "新店線", hours: "每天 10:00–18:00", note: "貓咪主題餐廳，有戶外區" },
+      { name: "O CAT CAFÉ", address: "新北市三重區重新路四段29號", mrt: "中和新蘆線", hours: "週三~日 10:30–19:00；週一、二公休", note: "貓咪自由互動，空間明亮" },
+      { name: "白蓮達咖啡", address: "台北市中山區松江路330巷14號1樓", mrt: "中和新蘆線", hours: "週一~日 12:30–22:00", note: "簡約裝潢，適合閱讀與小聚" },
+      { name: "有毛公寓", address: "台北市大安區和平東路三段223巷6號", mrt: "文湖線", hours: "週一~日 12:00–20:00", note: "貓旅館與咖啡複合式空間" },
+      { name: "一室有貓", address: "台北市中正區忠孝東路一段76號2樓", mrt: "板南線", hours: "每天 12:00–20:00", note: "寬敞空間，有貓咪互動區" },
+      { name: "貓樂貓咖啡（信義遠百）", address: "台北市信義區松仁路58號7樓", mrt: "淡水信義線", hours: "每天 11:00–21:30", note: "百貨空間，適合親子" },
+      { name: "小島生活 x 貓貓館", address: "台北市文山區景文街42號", mrt: "新店線", hours: "每天 10:00–19:00", note: "特色選物＋可愛貓咪" },
+      { name: "喵屋 Cat House Café", address: "台北市大安區信義路四段107號", mrt: "淡水信義線", hours: "每天 12:00–21:00", note: "輕食飲品，氣氛溫馨" },
+      { name: "幸福肥計畫咖啡店", address: "台北市南港區南港路三段50號", mrt: "板南線", hours: "每天 12:00–20:00", note: "貓咪主題咖啡廳，氣氛悠閒" },
+      { name: "仟日咖啡供應所", address: "台北市中山區中山北路二段26巷2號", mrt: "淡水信義線", hours: "每天 12:00–21:00", note: "老宅改造，溫馨感十足" },
+      { name: "Whiskers Cat Café", address: "新北市新莊區中正路256號2樓", mrt: "中和新蘆線", hours: "每天 11:30–20:30", note: "落地窗空間，明亮舒適" },
+      { name: "貓咪先生的朋友們", address: "台北市大安區羅斯福路三段283巷1號", mrt: "新店線", hours: "每天 10:00–20:00", note: "貓咪中途之家，認養推廣" },
+      { name: "貓毛散落所", address: "台北市萬華區康定路116號", mrt: "板南線", hours: "週四~日 13:00–20:00", note: "不限時，有創作展覽空間" }
     ];
 
     document.getElementById("lottery-form").addEventListener("submit", function(e) {
