--- a/index.html
+++ b/index.html
@@ -30,37 +30,37 @@
     <div id="result" class="result"></div>
   </div>
 
- <script>
+   <script>
     const cafes = [
-      { name: "Neko coffee 貓珈", address: "台北市中正區信陽街9號2樓", mrt: "板南線", hours: "每天 10:00–20:00", note: "計時制，提供漫畫、Switch等設施" },
-      { name: "FUFUCatCafe", address: "台北市萬華區武昌街二段53號3樓", mrt: "板南線", hours: "每天 12:00–21:00", note: "多品種貓咪，有餐點與書籍閱讀區" },
-      { name: "紅玥緬因貓藝廊", address: "台北市大同區赤峰街71巷4號", mrt: "淡水信義線", hours: "每天 13:00–21:00", note: "緬因貓主題，需預約" },
-      { name: "和貓咪有約", address: "台北市松山區三民路3巷21號", mrt: "松山新店線", hours: "每天 11:00–21:00", note: "約20隻貓咪，低消一杯飲料" },
+      { name: "Neko coffee 貓珈", address: "台北市中正區信陽街9號2樓", mrt: "板南線", hours: "每天 10:00–20:00", note: "計時制，提供漫畫、Switch等設施（近捷運台北車站）" },
+      { name: "FUFUCatCafe", address: "台北市萬華區武昌街二段53號3樓", mrt: "板南線", hours: "每天 12:00–21:00", note: "多品種貓咪，有餐點與書籍閱讀區（近捷運西門站）" },
+      { name: "紅玥緬因貓藝廊", address: "台北市大同區赤峰街71巷4號", mrt: "淡水信義線", hours: "每天 13:00–21:00", note: "緬因貓主題，需預約（近捷運中山站）" },
+      { name: "和貓咪有約", address: "台北市松山區三民路3巷21號", mrt: "松山新店線", hours: "每天 11:00–21:00", note: "約20隻貓咪，低消一杯飲料（近捷運南京三民站）" },
       { name: "貓谷", address: "新北市新店區雙城路175號之三", mrt: "新店線", hours: "週五~週日 三時段：11:00–13:30、14:30–17:00、18:00–20:30", note: "50隻貓咪，需預約，入場年齡限制" },
       { name: "貓欸 Camulet", address: "新北市板橋區文化路一段270巷3弄6號", mrt: "板南線", hours: "週二 11:00–18:00；週三~日 11:00–21:00；週一公休", note: "有貓咪零食扭蛋機，低消$250" },
       { name: "短短 DuanDuan", address: "新北市板橋區仁化街64巷16號", mrt: "板南線", hours: "週一~六 10:00–20:00；週日 10:00–19:00；週三公休", note: "中途之家，貓咪可領養" },
       { name: "貓客廳", address: "新北市中和區復興路18號", mrt: "中和新蘆線", hours: "週一、三~日 12:00–20:00；週二公休", note: "貓咪救援空間，不接待8歲以下兒童" },
-      { name: "潘寓 Pan's Haunt", address: "台北市中正區重慶南路三段3巷1號1樓", mrt: "中和新蘆線", hours: "週一~五 14:00–20:00；週六日 12:00–19:00", note: "安靜工作友善空間，有貓咪陪伴，氣氛溫馨" },
+      { name: "潘寓 Pan's Haunt", address: "台北市中正區重慶南路三段3巷1號1樓", mrt: "中和新蘆線", hours: "週一~五 14:00–20:00；週六日 12:00–19:00", note: "安靜工作友善空間，有貓咪陪伴，氣氛溫馨（近捷運小南門站）" },
       { name: "貓圖咖啡 CAT.jpg Cafe", address: "台北市大安區潮州街154號", mrt: "淡水信義線", hours: "週一~五 08:30–17:00；週六日 08:00–17:00", note: "安靜閱讀空間，提供特色飲品" },
       { name: "早初 entry time", address: "台北市萬華區成都路165號", mrt: "板南線", hours: "週一~五 10:00–16:30；週六日 10:00–17:00；週三公休", note: "三層樓空間，有3隻米克斯貓咪" },
       { name: "小春日和", address: "台北市松山區延壽街361號", mrt: "松山新店線", hours: "每天 11:00–21:00", note: "寵物餐點與洗澡美容服務" },
       { name: "疍宅", address: "台北市中山區松江路204巷45號", mrt: "中和新蘆線", hours: "週四~六 12:00–23:00；週日、三 12:00–20:00；週一、二公休", note: "老宅風格，甜點多樣" },
-      { name: "貳巷貓弄", address: "新北市三重區永福街52巷2號", mrt: "中和新蘆線", hours: "每天 11:00–20:00", note: "貓咪互動空間，有簡餐甜點" },
-      { name: "囧貓苑子", address: "新北市中和區中山路三段193巷7號", mrt: "中和新蘆線", hours: "週三~日 13:00–20:00；週一、二公休", note: "有貓的日式家常料理店" },
+      { name: "貳巷貓弄", address: "新北市三重區永福街52巷2號", mrt: "中和新蘆線", hours: "每天 11:00–20:00", note: "貓咪互動空間，有簡餐甜點（近捷運菜寮站）" },
+      { name: "囧貓苑子", address: "新北市中和區中山路三段193巷7號", mrt: "中和新蘆線", hours: "週三~日 13:00–20:00；週一、二公休", note: "有貓的日式家常料理店（近捷運永安市場站）" },
       { name: "窩日子", address: "台北市大安區潮州街158號", mrt: "淡水信義線", hours: "每天 11:00–21:00", note: "可與貓互動，有插座與Wi-Fi" },
-      { name: "貓隱村", address: "新北市新店區中正路542號", mrt: "新店線", hours: "每天 10:00–18:00", note: "貓咪主題餐廳，有戶外區" },
-      { name: "O CAT CAFÉ", address: "新北市三重區重新路四段29號", mrt: "中和新蘆線", hours: "週三~日 10:30–19:00；週一、二公休", note: "貓咪自由互動，空間明亮" },
-      { name: "白蓮達咖啡", address: "台北市中山區松江路330巷14號1樓", mrt: "中和新蘆線", hours: "週一~日 12:30–22:00", note: "簡約裝潢，適合閱讀與小聚" },
-      { name: "有毛公寓", address: "台北市大安區和平東路三段223巷6號", mrt: "文湖線", hours: "週一~日 12:00–20:00", note: "貓旅館與咖啡複合式空間" },
+      { name: "貓隱村", address: "新北市新店區中正路542號", mrt: "新店線", hours: "每天 10:00–18:00", note: "貓咪主題餐廳，有戶外區（近捷運大坪林站）" },
+      { name: "O CAT CAFÉ", address: "新北市三重區重新路四段29號", mrt: "中和新蘆線", hours: "週三~日 10:30–19:00；週一、二公休", note: "貓咪自由互動，空間明亮（近捷運三重站）" },
+      { name: "白蓮達咖啡", address: "台北市中山區松江路330巷14號1樓", mrt: "中和新蘆線", hours: "週一~日 12:30–22:00", note: "簡約裝潢，適合閱讀與小聚（近捷運行天宮站）" },
+      { name: "有毛公寓", address: "台北市大安區和平東路三段223巷6號", mrt: "文湖線", hours: "週一~日 12:00–20:00", note: "貓旅館與咖啡複合式空間（近捷運麟光站）" },
       { name: "一室有貓", address: "台北市中正區忠孝東路一段76號2樓", mrt: "板南線", hours: "每天 12:00–20:00", note: "寬敞空間，有貓咪互動區" },
-      { name: "貓樂貓咖啡（信義遠百）", address: "台北市信義區松仁路58號7樓", mrt: "淡水信義線", hours: "每天 11:00–21:30", note: "百貨空間，適合親子" },
-      { name: "小島生活 x 貓貓館", address: "台北市文山區景文街42號", mrt: "新店線", hours: "每天 10:00–19:00", note: "特色選物＋可愛貓咪" },
-      { name: "喵屋 Cat House Café", address: "台北市大安區信義路四段107號", mrt: "淡水信義線", hours: "每天 12:00–21:00", note: "輕食飲品，氣氛溫馨" },
-      { name: "幸福肥計畫咖啡店", address: "台北市南港區南港路三段50號", mrt: "板南線", hours: "每天 12:00–20:00", note: "貓咪主題咖啡廳，氣氛悠閒" },
-      { name: "仟日咖啡供應所", address: "台北市中山區中山北路二段26巷2號", mrt: "淡水信義線", hours: "每天 12:00–21:00", note: "老宅改造，溫馨感十足" },
-      { name: "Whiskers Cat Café", address: "新北市新莊區中正路256號2樓", mrt: "中和新蘆線", hours: "每天 11:30–20:30", note: "落地窗空間，明亮舒適" },
-      { name: "貓咪先生的朋友們", address: "台北市大安區羅斯福路三段283巷1號", mrt: "新店線", hours: "每天 10:00–20:00", note: "貓咪中途之家，認養推廣" },
-      { name: "貓毛散落所", address: "台北市萬華區康定路116號", mrt: "板南線", hours: "週四~日 13:00–20:00", note: "不限時，有創作展覽空間" }
+      { name: "貓樂貓咖啡（信義遠百）", address: "台北市信義區松仁路58號7樓", mrt: "淡水信義線", hours: "每天 11:00–21:30", note: "百貨空間，適合親子（近捷運市政府站）" },
+      { name: "小島生活 x 貓貓館", address: "台北市文山區景文街42號", mrt: "新店線", hours: "每天 10:00–19:00", note: "特色選物＋可愛貓咪（近捷運景美站）" },
+      { name: "喵屋 Cat House Café", address: "台北市大安區信義路四段107號", mrt: "淡水信義線", hours: "每天 12:00–21:00", note: "輕食飲品，氣氛溫馨（近捷運信義安和站）" },
+      { name: "幸福肥計畫咖啡店", address: "台北市南港區南港路三段50號", mrt: "板南線", hours: "每天 12:00–20:00", note: "貓咪主題咖啡廳，氣氛悠閒（近捷運南港展覽館站）" },
+      { name: "仟日咖啡供應所", address: "台北市中山區中山北路二段26巷2號", mrt: "淡水信義線", hours: "每天 12:00–21:00", note: "老宅改造，溫馨感十足（近捷運雙連站）" },
+      { name: "Whiskers Cat Café", address: "新北市新莊區中正路256號2樓", mrt: "中和新蘆線", hours: "每天 11:30–20:30", note: "落地窗空間，明亮舒適（近捷運新莊站）" },
+      { name: "貓咪先生的朋友們", address: "台北市大安區羅斯福路三段283巷1號", mrt: "新店線", hours: "每天 10:00–20:00", note: "貓咪中途之家，認養推廣（近捷運台電大樓站）" },
+      { name: "貓毛散落所", address: "台北市萬華區康定路116號", mrt: "板南線", hours: "週四~日 13:00–20:00", note: "不限時，有創作展覽空間（近捷運龍山寺站）" }
     ];
 
     document.getElementById("lottery-form").addEventListener("submit", function(e) {
@@ -84,5 +84,6 @@
         📝 備註：${pick.note}`;
     });
   </script>
+
 </body>
 </html>
