--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       { name: "貓欸 Camulet", address: "新北市板橋區文化路一段270巷3弄6號", mrt: "板南線", hours: "週二 11:00–18:00；週三~日 11:00–21:00；週一公休", note: "有貓咪零食扭蛋機，低消$250" },
       { name: "短短 DuanDuan", address: "新北市板橋區仁化街64巷16號", mrt: "板南線", hours: "週一~六 10:00–20:00；週日 10:00–19:00；週三公休", note: "中途之家，貓咪可領養" },
       { name: "貓客廳", address: "新北市中和區復興路18號", mrt: "中和新蘆線", hours: "週一、三~日 12:00–20:00；週二公休", note: "貓咪救援空間，不接待8歲以下兒童" },
-      { name: "潘寓 Pan's Haunt", address: "台北市中正區重慶南路三段3巷1號1樓", mrt: "中和新蘆線", hours: "週一~五 14:00–20:00；週六日 12:00–19:00", note: "安靜工作友善空間，有貓咪陪伴，氣氛溫馨（近捷運小南門站）" },
+      { name: "潘寓 Pan's Haunt", address: "106台北市大安區瑞安街133號", mrt: "中和新蘆線", hours: "週一~五 14:00–20:00；週六日 12:00–19:00", note: "安靜工作友善空間，有貓咪陪伴，氣氛溫馨（近捷運科技大樓站）" },
       { name: "貓圖咖啡 CAT.jpg Cafe", address: "台北市大安區潮州街154號", mrt: "淡水信義線", hours: "週一~五 08:30–17:00；週六日 08:00–17:00", note: "安靜閱讀空間，提供特色飲品" },
       { name: "早初 entry time", address: "台北市萬華區成都路165號", mrt: "板南線", hours: "週一~五 10:00–16:30；週六日 10:00–17:00；週三公休", note: "三層樓空間，有3隻米克斯貓咪" },
       { name: "小春日和", address: "台北市松山區延壽街361號", mrt: "松山新店線", hours: "每天 11:00–21:00", note: "寵物餐點與洗澡美容服務" },
@@ -84,6 +84,7 @@
         📝 備註：${pick.note}`;
     });
   </script>
+
 
 </body>
 </html>
